5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1758_1185.log
== TEST (2019-05-28 11:13:55) 
-- CODE:
g = array(eval(input("Vetor: ")))

i = 0
n = 0

while(i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i-1)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:08) 
-- CODE:
from numpy import*
g = array(eval(input("Vetor: ")))

i = 0
n = 0

while(i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i-1)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:14:22) 
-- CODE:
from numpy import*
g = array(eval(input("Vetor: ")))

i = 0
n = 0

while(i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i-1)
	else:
		i = i + 1
print(n)
-- EXECUTION TIME:
0.384355
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
